--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.0.RELEASE</version>
+    <version>2.0.1.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -113,6 +113,12 @@
       <artifactId>cloud-starter-exception</artifactId>
       <version>2.0.1-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.minlia.cloud.starter</groupId>
+      <artifactId>cloud-starter-stateful</artifactId>
+      <version>2.0.1-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
@@ -124,7 +130,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>2.0.1.RELEASE</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
